--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -13,6 +13,8 @@ jobs:
     container: 
       image: cypress/browsers:node18.12.0-chrome103-ff107
       options: --user 1001
+    strategy:
+      fail-fast: true
     steps:
       - name: Get code
         uses: actions/checkout@v3.3.0
