--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -28,7 +28,7 @@ jobs:
           group: UI Electron
           spec: ${{ github.events.inputs.spec }}
         env:
-          CYPRESS_RECORD_KEY: 6ff9fcd2-91d6-479b-9c7c-cf02f604a36f
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cypress-e2e-chrome:
     needs: cypress-e2e-electron
@@ -49,7 +49,7 @@ jobs:
           group: UI Chrome
           spec: ${{ github.events.inputs.spec }}
         env:
-          CYPRESS_RECORD_KEY: 6ff9fcd2-91d6-479b-9c7c-cf02f604a36f
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cypress-e2e-firefox:
     needs: cypress-e2e-electron
@@ -70,5 +70,5 @@ jobs:
           group: UI Firefox
           spec: ${{ github.events.inputs.spec }}
         env:
-          CYPRESS_RECORD_KEY: 6ff9fcd2-91d6-479b-9c7c-cf02f604a36f
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
